2008-05-09  Johan Dahlin  <johan@flumotion.com>

	* flumotion/common/Makefile.am:
	* flumotion/common/config.py:
	* flumotion/common/fraction.py:
	* flumotion/component/encoders/theora/wizard_gtk.py:
	* flumotion/component/producers/webcam/wizard_gtk.py:
	* flumotion/test/test_common_fraction.py:
	* flumotion/test/test_common_xmlwriter.py:
	* flumotion/wizard/models.py:
	Clear up confusion about fractions between webcam step and
	theora, add functions to convert to and from fractions.
	Fixes #968

2008-05-09  Johan Dahlin  <johan@flumotion.com>

	* flumotion/wizard/configurationwizard.py:
	Improve error message from stray taskFinished calls

	* flumotion/component/producers/webcam/wizard_gtk.py:
	Rename to camelCase.
	Refactor taskFinished call out of _clear. Document when _clear
	is called.
	Fixes #967

2008-05-08  Johan Dahlin  <johan@flumotion.com>

	* flumotion/common/registry.py:
	* flumotion/component/consumers/disker/wizard_gtk.py:
	* flumotion/component/consumers/httpstreamer/wizard_gtk.py:
	* flumotion/component/consumers/shout2/wizard_gtk.py:
	* flumotion/component/encoders/dirac/wizard_gtk.py:
	* flumotion/component/encoders/jpeg/wizard_gtk.py:
	* flumotion/component/encoders/mulaw/wizard_gtk.py:
	* flumotion/component/encoders/smoke/wizard_gtk.py:
	* flumotion/component/encoders/speex/wizard_gtk.py:
	* flumotion/component/encoders/theora/wizard_gtk.py:
	* flumotion/component/encoders/vorbis/wizard_gtk.py:
	* flumotion/component/plugs/cortado/wizard_gtk.py:
	* flumotion/component/producers/audiotest/wizard_gtk.py:
	* flumotion/component/producers/bttv/wizard_gtk.py:
	* flumotion/component/producers/firewire/wizard_gtk.py:
	* flumotion/component/producers/soundcard/wizard_gtk.py:
	* flumotion/component/producers/videotest/wizard_gtk.py:
	* flumotion/component/producers/webcam/wizard_gtk.py:
	* flumotion/test/test_wizard_save.py:
	* flumotion/wizard/configurationwizard.py:
	* flumotion/wizard/configurationwriter.py:
	* flumotion/wizard/conversionsteps.py: