@@ -1,3 +1,11 @@
+2008-05-10  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* flumotion/common/common.py:
+	* flumotion/test/test_common.py:
+	  Don't raise an exception when signalling a pid for liveness
+	  run by another user.
+	  Fixes #971.
+
 2008-05-09  Johan Dahlin  <johan@flumotion.com>
 
 	* flumotion/common/Makefile.am:
